Fixed full block pipe model rendering via refactor  (#28)